Comments and refactoring